# V-ABHelper

./: README.md  main.py  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/jks/: King丶枫岚.jks
app/src/androidTest/java/com/flyme/update/helper/: ExampleInstrumentedTest.java
app/src/androidTest/java/me/yowal/updatehelper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/me/yowal/updatehelper/bean/: UpdateInfo.aidl
app/src/main/aidl/me/yowal/updatehelper/interfaces/: IUpdateCallback.aidl
app/src/main/aidl/me/yowal/updatehelper/service/: IUpdateService.aidl
app/src/main/assets/: M2381  M2391  magiskboot  stub.apk  xposed_init
app/src/main/cpp/: CMakeLists.txt  jni.cc  ksu.cc  ksu.h  pass.cpp
app/src/main/cpp/include/: LogUtils.h  inject.h  pass.h  ptrace_utils.h
app/src/main/cpp/proto/: ota_metadata.pb.cc  ota_metadata.pb.h  update_metadata.pb.cc  update_metadata.pb.h  update_metadata.proto
app/src/main/cpp/protobuf-3.7.1/: Makefile.in  configure
app/src/main/cpp/protobuf-3.7.1/benchmarks/: Makefile.in
app/src/main/cpp/protobuf-3.7.1/conformance/: Makefile.in
app/src/main/cpp/protobuf-3.7.1/src/: Makefile.in
app/src/main/cpp/protobuf-3.7.1/src/google/protobuf/stubs/: common.cc
app/src/main/cpp/utils/: inject.cpp  lsplt.cc  ptrace_utils.cpp
app/src/main/java/com/flyme/update/helper/: App.java
app/src/main/java/me/yowal/updatehelper/: Config.java  Natives.java
app/src/main/java/me/yowal/updatehelper/activity/: BaseActivity.java  LogActivity.java  MainActivity.java
app/src/main/java/me/yowal/updatehelper/adapter/: FileAdapter.java
app/src/main/java/me/yowal/updatehelper/application/: myApplication.java
app/src/main/java/me/yowal/updatehelper/bean/: FileBean.java  UpdateInfo.java
app/src/main/res/drawable/: apatch.xml  ic_launcher_kernelsu.xml  ic_launcher_magisk.xml
app/src/main/res/drawable-anydpi/: ic_file_sort.xml  icon_copy.xml  icon_file_sort.xml  icon_home_flash.xml  icon_home_phone.xml  icon_info.xml  icon_notification_important.xml  icon_refresh.xml
app/src/main/res/layout/: activity_log.xml  activity_main.xml  dialog_about.xml  dialog_file_select.xml  dialog_input.xml  dialog_permissin_write.xml  fragment_about.xml  fragment_home.xml  item_file_list.xml  layout_navigation_item.xml
app/src/main/res/menu/: memu_reboot.xml  toolbar_memu.xml
app/src/main/res/raw/: apatch.sh  apatch_patch.sh  apatch_unpatch.sh  flash_script.sh  magisk_uninstaller.sh  manager.sh
app/src/main/res/values/: arrays.xml  attrs.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/me/yowal/updatehelper/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+73 files in other folders)
